--- a/_pages/posters.html
+++ b/_pages/posters.html
@@ -6,5 +6,5 @@ author_profile: true
 ---
 
 {% for post in site.posters reversed %}
-  {% include archive-single-talk.html %}
+  {% include archive-single-poster.html %}
 {% endfor %}
