--- a/_pages/posters.html
+++ b/_pages/posters.html
@@ -5,6 +5,8 @@ permalink: /posters/
 author_profile: true
 ---
 
+{% include base_path %}
+
 {% for post in site.posters reversed %}
-  {% include archive-single-poster.html %}
+  {% include archive-single.html %}
 {% endfor %}
